--- a/client/src/songbook/SongBook.css
+++ b/client/src/songbook/SongBook.css
@@ -44,3 +44,13 @@
   cursor:pointer;
   font-weight: bold;
 }
+
+.SongBody {
+  color: black;
+  background-color: white;
+  padding: 1em;
+  font-family: "Courier New";
+  letter-spacing: 0px;
+  white-space: pre;
+  border-radius: 20px;
+}
