--- a/client/src/songbook/SongBook.css
+++ b/client/src/songbook/SongBook.css
@@ -1,56 +1,63 @@
 .SongBook {
-  display: grid;
-  grid-template-columns: auto minmax(200px, 400px) minmax(600px, 1000px) auto;
-  column-gap: 30px;
+    display: grid;
+    grid-template-columns: auto minmax(200px, 400px) minmax(600px, 1000px) auto;
+    column-gap: 30px;
 }
 
 .Header {
-  grid-column: 2/4;
-  grid-row: 1/2;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  padding: 0px;
+    grid-column: 2/4;
+    grid-row: 1/2;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 0px;
 }
 
 .SideBar {
-  grid-column: 2/3;
-  grid-row: 2/3;
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
 .Content {
-  grid-column: 3/4;
-  grid-row: 2/3;
+    grid-column: 3/4;
+    grid-row: 2/3;
 }
 
 .roundedbox {
-  border: 2px solid black;
-  border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.65);
+    border: 2px solid black;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.65);
 }
 
-.header h1 {
-  color: #EEEEEE;
-  font-size: 4em;
-  text-shadow: 10px 10px 3px rgba(0,0,0,0.65);
-  margin: 5px;
+#site-header-link {
+    text-decoration: none;
+    color: #eeeeee;
+    font-size: 2em;
+    letter-spacing: 8px;
+    text-shadow: 10px 10px 3px rgba(0, 0, 0, 0.65);
+    padding: 0px;
+}
+
+h1 {
+    margin: 10px;
 }
 
 .SideBar {
-  padding: 25px;
+    padding: 25px;
 }
 
-.songlink:hover, .songlink.selected {
-  cursor:pointer;
-  font-weight: bold;
+.songlink:hover,
+.songlink.selected {
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .SongBody {
-  color: black;
-  background-color: white;
-  padding: 1em;
-  font-family: "Courier New";
-  letter-spacing: 0px;
-  white-space: pre;
-  border-radius: 20px;
+    color: black;
+    background-color: white;
+    padding: 1em;
+    font-family: 'Courier New';
+    letter-spacing: 0px;
+    white-space: pre;
+    border-radius: 20px;
 }
